--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
 pyzmq == 22.3.0; python_version >= "3.6"
+contractions
+nltk
+spacy
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0/en_core_web_sm-3.0.0.tar.gz#egg=en_core_web_sm
 fastapi
 uvicorn[standard]
